# gayradar

./: LICENSE  README.md  flake.nix
ai/: .gitignore  Dockerfile  antelopev2.txt  app.py  lr-if-alv3.sav  pyproject.toml
bot/: .gitignore  Cargo.toml
bot/.sqlx/: query-bf4b740e7959c991ffc2e8293be480a5f82126496837c006243d452ff9a97479.json
bot/migrations/: 20240126080214_init.sql
bot/src/: db.rs  main.rs
train/: Embeddings.ipynb  Install.ipynb  Mamba.ipynb  Train.ipynb
